# Sample_Blogs

./: Cargo.toml
.github/workflows/: rust.yml
migrations/: 20230413085629_create_categories.sql  20230414012424_create_posts.sql  20230414014946_insert_categories.sql  20230414015221_insert_categories_second.sql  20230414015326_insert_posts.sql  20230414045558_rename_posts_table_description_column.sql  20230627015323_many_to_many_relationship.sql
src/: main.rs
src/assets/css/: final_style.css
src/authentication/: login.rs
src/controllers/: base_controller.rs  category_controller.rs  category_crud_controller.rs  controller_post.rs  filter_navigate.rs  filter_post.rs  index.rs  mod.rs  navigate.rs  pg_connect.rs  post.rs  posts_controller.rs  posts_crud_controller.rs
src/model/: models.rs
templates/: admin.html  admins.html  base.html  base_bootstrap.html  blogs.html  categories.html  category_pagination.html  home.html  home_filter_navigation.html  home_post.html  index.html  login.html  new_category.html  new_post.html  posts.html  posts_create.html  register.html  update_category.html
