[package]
name = "blog-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "blog-rs" 
path = "src/main.rs"

[[bin]]
name = "markd"
path = "src/bin/markd.rs"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tower = "0.4"

[dependencies]
paginator = "0.2.6"
askama = {version="0.12.0", features=["markdown"]}
tokio = {version="1.13.0", features = ["macros", "rt-multi-thread"]}
axum =  "0.6.4"
sqlx = {version = "0.6", features = ["runtime-tokio-rustls", "postgres", "macros", "time"]} 
tower-http = {version = "0.4", features=["full"]}
egui-dropdown = "0.2"
eframe = "0.21.3"
egui = "0.21"
tower-cookies = "0.9.0"
sqlxinsert = "0.6.0"
tower-layer = "0.3"
tower-service = "0.3"
cookie = { version = "0.17", features = ["percent-encode"] }
